--- a/materials/presentaciones/renacimiento/slide8.html
+++ b/materials/presentaciones/renacimiento/slide8.html
@@ -13,145 +13,99 @@
             box-sizing: border-box;
         }
         body {
-            font-family: 'Source Sans Pro', sans-serif;
-            color: #333;
+            font-family: 'Crimson Text', serif;
+            color: #3a2a1a;
+            background-color: #f5f0e6;
+            overflow: hidden;
+            display: flex; /* Cambiado a flex para alinear slide y menú */
         }
         .slide {
-            width: 1280px;
-            min-height: 720px;
+            width: 1000px; /* Reducido para hacer espacio al menú */
+            height: 100vh;
             position: relative;
-            overflow: hidden;
-            background-color: #f8f5f2;
-            display: flex;
-            flex-direction: column;
-        }
-        .header {
-            padding: 40px 70px 20px;
-        }
-        .title {
-            font-size: 40px;
-            font-weight: 700;
-            color: #4a5568;
-            margin-bottom: 10px;
-        }
-        .content {
-            display: flex;
-            flex-grow: 1;
-            padding: 0 70px 40px;
-        }
-        .text-content {
-            flex: 1.2;
-            padding-right: 30px;
-            display: flex;
-            flex-direction: column;
-        }
-        .image-content {
-            flex: 0.8;
+            background-image: url('https://sfile.chatglm.cn/images-ppt/f71869bec81e.jpg');
+            background-size: cover;
+            background-position: center;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            gap: 20px;
+            align-items: center;
+            flex-shrink: 0; /* Evita que el slide se encoja */
         }
-        .image-container {
-            width: 100%;
-            height: 300px;
-            overflow: hidden;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-        .image-container img {
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            background-color: rgba(58, 42, 26, 0.7);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0 100px;
         }
-        .quote {
-            background-color: rgba(128, 90, 213, 0.1);
-            padding: 20px;
-            border-radius: 8px;
-            font-style: italic;
-            color: #4a5568;
-            font-size: 18px;
-            line-height: 1.5;
-            position: relative;
-        }
-        .quote::before {
-            content: """;
+        .title {
+            font-family: 'Cinzel', serif;
             font-size: 60px;
-            color: rgba(128, 90, 213, 0.3);
-            position: absolute;
-            top: -10px;
-            left: 10px;
-        }
-        .section {
+            font-weight: 700;
+            color: #f5f0e6;
+            text-align: center;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
-        .section-title {
+        .subtitle {
             font-size: 24px;
-            font-weight: 600;
-            color: #805ad5;
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
+            color: #e6d7c3;
+            text-align: center;
+            max-width: 800px;
         }
-        .section-title i {
-            margin-right: 10px;
+        .decorative-line {
+            width: 200px;
+            height: 2px;
+            background-color: #c9a97e;
+            margin: 30px 0;
         }
-        .feature-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
+
+        /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
+        .side-menu {
+            width: 280px;
+            height: 100vh;
+            background-color: rgba(58, 42, 26, 0.95);
+            color: #f5f0e6;
+            z-index: 2000;
+            padding-top: 20px;
+            overflow-y: auto;
+            box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+            flex-shrink: 0; /* Evita que el menú se encoja */
+        }
+        .menu-content h3 {
+            padding: 0 20px;
             margin-bottom: 15px;
+            font-family: 'Cinzel', serif;
+            font-size: 1.2em;
+            color: #c9a97e;
         }
-        .feature-item {
-            background-color: rgba(128, 90, 213, 0.1);
-            padding: 8px 15px;
-            border-radius: 20px;
-            font-size: 18px;
-            color: #4a5568;
-            display: flex;
-            align-items: center;
+        #menuList {
+            list-style: none;
+            padding: 0;
         }
-        .feature-item i {
-            font-size: 18px;
-            margin-right: 5px;
-            color: #805ad5;
+        #menuList li a {
+            display: block;
+            padding: 12px 20px;
+            color: #e6d7c3;
+            text-decoration: none;
+            font-size: 15px;
+            transition: background-color 0.2s, color 0.2s;
+            border-bottom: 1px solid rgba(201, 169, 126, 0.2);
         }
-        .highlight {
-            color: #805ad5;
-            font-weight: 600;
+        #menuList li a:hover {
+            background-color: rgba(201, 169, 126, 0.2);
         }
-        .info-box {
-            background-color: rgba(128, 90, 213, 0.05);
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 15px;
-        }
-        .info-title {
-            font-size: 20px;
-            font-weight: 600;
-            color: #805ad5;
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
-        }
-        .info-title i {
-            margin-right: 8px;
-        }
-        .info-content {
-            font-size: 18px;
-            color: #4a5568;
-            line-height: 1.5;
-        }
-        .year-badge {
-            display: inline-flex;
-            align-items: center;
-            background-color: #805ad5;
-            color: white;
-            padding: 4px 10px;
-            border-radius: 15px;
-            font-size: 16px;
-            font-weight: 600;
-            margin-right: 8px;
+        #menuList li a.active {
+            background-color: #c9a97e;
+            color: #3a2a1a;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -215,5 +169,27 @@
             </div>
         </div>
     </div>
+
+    <!-- ======================================= -->
+    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
+    <!-- ======================================= -->
+
+    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
+    <div id="sideMenu" class="side-menu">
+        <div class="menu-content">
+            <h3>Índice</h3>
+            <ul id="menuList"></ul>
+        </div>
+    </div>
+
+    <!-- Navegación Inferior (Anterior/Siguiente) -->
+    <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
+        <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
+        <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
+    </div>
+
+    <!-- Cargar el script de navegación -->
+    <script src="navigation.js"></script>
+
 </body>
 </html>
