--- a/materials/presentaciones/renacimiento/slide2.html
+++ b/materials/presentaciones/renacimiento/slide2.html
@@ -6,13 +6,13 @@
     <title>Contexto histórico</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <style>
+    <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        body {
+       body {
             font-family: 'Crimson Text', serif;
             color: #3a2a1a;
             background-color: #f5f0e6;
@@ -23,6 +23,7 @@
             width: 1000px; /* Reducido para hacer espacio al menú */
             height: 100vh;
             position: relative;
+            background-image: url('https://sfile.chatglm.cn/images-ppt/f71869bec81e.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -31,81 +32,113 @@
             align-items: center;
             flex-shrink: 0; /* Evita que el slide se encoja */
         }
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(58, 42, 26, 0.7);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 0 100px;
+        .header {
+            padding: 40px 70px 20px;
         }
         .title {
-            font-family: 'Cinzel', serif;
-            font-size: 60px;
+            font-size: 40px;
             font-weight: 700;
-            color: #f5f0e6;
-            text-align: center;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            color: #4a5568;
+            margin-bottom: 10px;
         }
-        .subtitle {
-            font-size: 24px;
-            color: #e6d7c3;
-            text-align: center;
-            max-width: 800px;
+        .content {
+            display: flex;
+            flex-grow: 1;
+            padding: 0 70px 40px;
         }
-        .decorative-line {
-            width: 200px;
-            height: 2px;
-            background-color: #c9a97e;
-            margin: 30px 0;
+        .text-content {
+            flex: 1;
+            padding-right: 30px;
         }
-
-        /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
-        .side-menu {
-            width: 280px;
-            height: 100vh;
-            background-color: rgba(58, 42, 26, 0.95);
-            color: #f5f0e6;
-            z-index: 2000;
-            padding-top: 20px;
-            overflow-y: auto;
-            box-shadow: -2px 0 5px rgba(0,0,0,0.2);
-            flex-shrink: 0; /* Evita que el menú se encoja */
+        .image-content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        .menu-content h3 {
-            padding: 0 20px;
-            margin-bottom: 15px;
-            font-family: 'Cinzel', serif;
-            font-size: 1.2em;
-            color: #c9a97e;
+        .image-container {
+            width: 100%;
+            height: 400px;
+            overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
-        #menuList {
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .event-list {
             list-style: none;
-            padding: 0;
+            margin-top: 20px;
         }
-        #menuList li a {
-            display: block;
-            padding: 12px 20px;
-            color: #e6d7c3;
-            text-decoration: none;
-            font-size: 15px;
-            transition: background-color 0.2s, color 0.2s;
-            border-bottom: 1px solid rgba(201, 169, 126, 0.2);
+        .event-item {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 20px;
         }
-        #menuList li a:hover {
-            background-color: rgba(201, 169, 126, 0.2);
+        .event-year {
+            font-size: 24px;
+            font-weight: 700;
+            color: #718096;
+            margin-right: 15px;
+            min-width: 70px;
         }
-        #menuList li a.active {
-            background-color: #c9a97e;
-            color: #3a2a1a;
-            font-weight: bold;
+        .event-description {
+            font-size: 20px;
+            line-height: 1.5;
+            color: #4a5568;
         }
+        .highlight {
+            color: #805ad5;
+            font-weight: 600;
+        }
+        .intro-text {
+            font-size: 20px;
+            line-height: 1.5;
+            color: #4a5568;
+            margin-bottom: 20px;
+        }
+     /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
+.side-menu {
+    width: 280px;
+    height: 100vh;
+    background-color: rgba(58, 42, 26, 0.95);
+    color: #f5f0e6;
+    z-index: 2000;
+    padding-top: 20px;
+    overflow-y: auto;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+    flex-shrink: 0;
+}
+.menu-content h3 {
+    padding: 0 20px;
+    margin-bottom: 15px;
+    font-family: 'Cinzel', serif;
+    font-size: 1.2em;
+    color: #c9a97e;
+}
+#menuList {
+    list-style: none;
+    padding: 0;
+}
+#menuList li a {
+    display: block;
+    padding: 12px 20px;
+    color: #e6d7c3;
+    text-decoration: none;
+    font-size: 15px;
+    transition: background-color 0.2s, color 0.2s;
+    border-bottom: 1px solid rgba(201, 169, 126, 0.2);
+}
+#menuList li a:hover {
+    background-color: rgba(201, 169, 126, 0.2);
+}
+#menuList li a.active {
+    background-color: #c9a97e;
+    color: #3a2a1a;
+    font-weight: bold;
+}
     </style>
 </head>
 <body>
@@ -143,18 +176,6 @@
         </div>
     </div>
 
-    <!-- ======================================= -->
-    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
-    <!-- ======================================= -->
-
-    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
-    <div id="sideMenu" class="side-menu">
-        <div class="menu-content">
-            <h3>Índice</h3>
-            <ul id="menuList"></ul>
-        </div>
-    </div>
-
     <!-- Navegación Inferior (Anterior/Siguiente) -->
     <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
         <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
@@ -163,6 +184,5 @@
 
     <!-- Cargar el script de navegación -->
     <script src="navigation.js"></script>
-
 </body>
 </html>
