--- a/materials/presentaciones/renacimiento/slide3.html
+++ b/materials/presentaciones/renacimiento/slide3.html
@@ -6,105 +6,193 @@
     <title>Sociedad en transición: del campo a la ciudad</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <style>
+    <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
         body {
-            font-family: 'Crimson Text', serif;
-            color: #3a2a1a;
-            background-color: #f5f0e6;
-            overflow: hidden;
-            display: flex; /* Cambiado a flex para alinear slide y menú */
+            font-family: 'Source Sans Pro', sans-serif;
+            color: #333;
         }
         .slide {
-            width: 1000px; /* Reducido para hacer espacio al menú */
-            height: 100vh;
+            width: 1280px;
+            min-height: 720px;
             position: relative;
-            background-size: cover;
-            background-position: center;
+            overflow: hidden;
+            background-color: #f8f5f2;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            flex-shrink: 0; /* Evita que el slide se encoja */
         }
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(58, 42, 26, 0.7);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 0 100px;
+        .header {
+            padding: 40px 70px 20px;
         }
         .title {
-            font-family: 'Cinzel', serif;
-            font-size: 60px;
+            font-size: 40px;
             font-weight: 700;
-            color: #f5f0e6;
-            text-align: center;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            color: #4a5568;
+            margin-bottom: 10px;
         }
-        .subtitle {
+        .content {
+            display: flex;
+            flex-grow: 1;
+            padding: 0 70px 40px;
+            padding-right: 90px; /* Added space for navigation */
+        }
+        .text-content {
+            flex: 1.2;
+            padding-right: 30px;
+            display: flex;
+            flex-direction: column;
+        }
+        .image-content {
+            flex: 0.8;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
+        }
+        .image-container {
+            width: 100%;
+            height: 400px;
+            overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .section {
+            margin-bottom: 25px;
+        }
+        .section-title {
             font-size: 24px;
-            color: #e6d7c3;
-            text-align: center;
-            max-width: 800px;
-        }
-        .decorative-line {
-            width: 200px;
-            height: 2px;
-            background-color: #c9a97e;
-            margin: 30px 0;
-        }
-
-        /* --- ESTILOS PARA EL MENÚ LATERAL (SIEMPRE VISIBLE) --- */
-        .side-menu {
-            width: 280px;
-            height: 100vh;
-            background-color: rgba(58, 42, 26, 0.95);
-            color: #f5f0e6;
-            z-index: 2000;
-            padding-top: 20px;
-            overflow-y: auto;
-            box-shadow: -2px 0 5px rgba(0,0,0,0.2);
-            flex-shrink: 0; /* Evita que el menú se encoja */
-        }
-        .menu-content h3 {
-            padding: 0 20px;
+            font-weight: 600;
+            color: #805ad5;
             margin-bottom: 15px;
-            font-family: 'Cinzel', serif;
-            font-size: 1.2em;
-            color: #c9a97e;
+            display: flex;
+            align-items: center;
         }
-        #menuList {
-            list-style: none;
-            padding: 0;
+        .section-title i {
+            margin-right: 10px;
         }
-        #menuList li a {
-            display: block;
-            padding: 12px 20px;
-            color: #e6d7c3;
-            text-decoration: none;
-            font-size: 15px;
-            transition: background-color 0.2s, color 0.2s;
-            border-bottom: 1px solid rgba(201, 169, 126, 0.2);
+        .feature-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-bottom: 20px;
         }
-        #menuList li a:hover {
-            background-color: rgba(201, 169, 126, 0.2);
+        .feature-item {
+            background-color: rgba(128, 90, 213, 0.1);
+            padding: 10px 15px;
+            border-radius: 20px;
+            font-size: 20px;
+            color: #4a5568;
+            display: flex;
+            align-items: center;
         }
-        #menuList li a.active {
-            background-color: #c9a97e;
-            color: #3a2a1a;
-            font-weight: bold;
+        .feature-item i {
+            font-size: 20px;
+            margin-right: 8px;
+            color: #805ad5;
+        }
+        .highlight {
+            color: #805ad5;
+            font-weight: 600;
+        }
+        .comparison {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .comparison-box {
+            flex: 1;
+            background-color: rgba(128, 90, 213, 0.05);
+            padding: 20px;
+            border-radius: 8px;
+        }
+        .comparison-title {
+            font-size: 22px;
+            font-weight: 600;
+            color: #805ad5;
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+        }
+        .comparison-title i {
+            margin-right: 8px;
+        }
+        .comparison-item {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 12px;
+        }
+        .comparison-item i {
+            color: #805ad5;
+            margin-right: 10px;
+            margin-top: 2px;
+        }
+        .comparison-text {
+            font-size: 20px;
+            color: #4a5568;
+            line-height: 1.4;
+        }
+        .quote {
+            background-color: rgba(128, 90, 213, 0.1);
+            padding: 20px;
+            border-radius: 8px;
+            font-style: italic;
+            color: #4a5568;
+            font-size: 20px;
+            line-height: 1.5;
+            position: relative;
+        }
+        .quote::before {
+            content: """;
+            font-size: 60px;
+            color: rgba(128, 90, 213, 0.3);
+            position: absolute;
+            top: -10px;
+            left: 10px;
+        }
+        .navigation {
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 100%;
+            width: 60px;
+            background-color: rgba(41, 50, 65, 0.85);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px 0;
+            z-index: 100;
+        }
+        .nav-item {
+            width: 40px;
+            height: 40px;
+            margin: 8px 0;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .nav-item:hover {
+            background-color: rgba(255, 255, 255, 0.4);
+            transform: scale(1.1);
+        }
+        .nav-item.active {
+            background-color: #805ad5;
+            transform: scale(1.15);
         }
     </style>
 </head>
@@ -203,28 +291,22 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- ======================================= -->
-    <!-- ====== CÓDIGO DE NAVEGACIÓN AÑADIDO ===== -->
-    <!-- ======================================= -->
-
-    <!-- Menú Lateral de Navegación (SIEMPRE VISIBLE) -->
-    <div id="sideMenu" class="side-menu">
-        <div class="menu-content">
-            <h3>Índice</h3>
-            <ul id="menuList"></ul>
+        <div class="navigation">
+            <div class="nav-item">1</div>
+            <div class="nav-item">2</div>
+            <div class="nav-item active">3</div>
+            <div class="nav-item">4</div>
+            <div class="nav-item">5</div>
+            <div class="nav-item">6</div>
+            <div class="nav-item">7</div>
+            <div class="nav-item">8</div>
+            <div class="nav-item">9</div>
+            <div class="nav-item">10</div>
+            <div class="nav-item">11</div>
+            <div class="nav-item">12</div>
+            <div class="nav-item">13</div>
+            <div class="nav-item">14</div>
         </div>
     </div>
-
-    <!-- Navegación Inferior (Anterior/Siguiente) -->
-    <div class="navigation" style="position: fixed; bottom: 20px; left: 0; width: 1000px; text-align: center; z-index: 1000;">
-        <button id="prevBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">← Anterior</button>
-        <button id="nextBtn" style="font-size: 1em; padding: 10px 20px; margin: 0 10px; cursor: pointer;">Siguiente →</button>
-    </div>
-
-    <!-- Cargar el script de navegación -->
-    <script src="navigation.js"></script>
-
 </body>
 </html>
