--- a/materials/presentaciones/barroco/actividades.html
+++ b/materials/presentaciones/barroco/actividades.html
@@ -71,6 +71,9 @@
         .footer { border-top: 1px solid rgba(255, 255, 255, 0.2); padding: 2rem 0; color: rgba(255, 255, 255, 0.7);
                   text-align: center; font-size: 0.9rem; }
         .footer .container { max-width: 1200px; margin: 0 auto; }
+        .footer-content { display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; text-align: left; }
+        .footer-logo { height: 52px; width: auto; }
+        .footer-text { margin: 0; }
 
         .mobile-menu-btn { position: fixed; top: 1.5rem; left: 1.5rem; z-index: 2000; width: 50px; height: 50px;
                            background: var(--gradient-accent); border: none; border-radius: 12px; display: none; cursor: pointer; }
@@ -483,7 +486,10 @@
         </div>
 
         <footer class="footer">
-            <div class="container">© <span id="y"></span> Curso: Literatura española hasta el siglo XVIII · Centro de Lenguas Modernas - Universidad de Granada · Profesor Javier Benítez Laínez</div>
+            <div class="container footer-content">
+                <img src="../../img/logo-clm.png" alt="Logotipo del Centro de Lenguas Modernas de la Universidad de Granada" class="footer-logo">
+                <p class="footer-text">© <span id="y"></span> Curso: Literatura española hasta el siglo XVIII · Centro de Lenguas Modernas - Universidad de Granada · Profesor Javier Benítez Laínez</p>
+            </div>
         </footer>
     </main>
 
