Point Barroco footers to CLM logo image

--- a/materials/presentaciones/barroco/actividades.html
+++ b/materials/presentaciones/barroco/actividades.html
@@ -487,7 +487,7 @@
 
         <footer class="footer">
             <div class="container footer-content">
-                <img src="../../img/logo-clm.png" alt="Logotipo del Centro de Lenguas Modernas de la Universidad de Granada" class="footer-logo">
+                <img src="../../img/IMG_3551.PNG" alt="Logotipo del Centro de Lenguas Modernas de la Universidad de Granada" class="footer-logo">
                 <p class="footer-text">© <span id="y"></span> Curso: Literatura española hasta el siglo XVIII · Centro de Lenguas Modernas - Universidad de Granada · Profesor Javier Benítez Laínez</p>
             </div>
         </footer>
