--- a/materials/presentaciones/barroco/index.html
+++ b/materials/presentaciones/barroco/index.html
@@ -683,7 +683,7 @@
             <!-- Footer -->
             <footer class="footer" style="background: var(--bg-card); border-radius: 24px; padding: 2rem; text-align: center; box-shadow: var(--shadow-md); margin-top: 4rem;">
                 <div class="footer-content">
-                    <img class="footer-logo" src="../../img/logo-clm.png" alt="Logotipo del Centro de Lenguas Modernas de la Universidad de Granada">
+                    <img class="footer-logo" src="../../img/IMG_3551.PNG" alt="Logotipo del Centro de Lenguas Modernas de la Universidad de Granada">
                     <div>
                         <p class="footer-text" style="margin: 0; color: #666;">Portal educativo sobre el Barroco español</p>
                         <p class="footer-text" style="margin: 0.35rem 0 0; opacity: 0.7; font-size: 0.9rem;">Profesor Javier Benítez Laínez · Literatura española hasta el siglo XVIII</p>
