Add Barroco author and works images

--- a/materials/presentaciones/barroco/autores.html
+++ b/materials/presentaciones/barroco/autores.html
@@ -65,6 +65,9 @@
 
         .author-card h2 { margin-top: 0; }
 
+        .author-header { display: flex; gap: 1.25rem; align-items: center; flex-wrap: wrap; }
+        .author-photo { width: 140px; height: 140px; object-fit: cover; border-radius: 16px; box-shadow: var(--shadow-md); }
+
         .quote-box {
             background: linear-gradient(135deg, rgba(250, 112, 154, 0.1), rgba(254, 225, 64, 0.1));
             border-left: 4px solid #fa709a; padding: 1.5rem; border-radius: 12px;
@@ -120,8 +123,13 @@
 
                 <!-- LOPE DE VEGA -->
                 <div class="author-card">
-                    <h2>🎭 Lope de Vega (1562-1635)</h2>
-                    <h3>El Fénix de los ingenios</h3>
+                    <div class="author-header">
+                        <img class="author-photo" src="../../img/barroco/lope-de-vega.jpg" alt="Retrato de Lope de Vega">
+                        <div>
+                            <h2>🎭 Lope de Vega (1562-1635)</h2>
+                            <h3>El Fénix de los ingenios</h3>
+                        </div>
+                    </div>
 
                     <p>
                         <strong>Félix Lope de Vega y Carpio</strong> fue el escritor más prolífico y popular de su
@@ -162,8 +170,13 @@
 
                 <!-- CALDERÓN DE LA BARCA -->
                 <div class="author-card" style="border-left-color: #EC4899;">
-                    <h2>🌟 Calderón de la Barca (1600-1681)</h2>
-                    <h3>El dramaturgo filosófico</h3>
+                    <div class="author-header">
+                        <img class="author-photo" src="../../img/barroco/calderon-de-la-barca.jpg" alt="Retrato de Pedro Calderón de la Barca">
+                        <div>
+                            <h2>🌟 Calderón de la Barca (1600-1681)</h2>
+                            <h3>El dramaturgo filosófico</h3>
+                        </div>
+                    </div>
 
                     <p>
                         <strong>Pedro Calderón de la Barca</strong> llevó el teatro barroco a su máxima complejidad
@@ -204,8 +217,13 @@
 
                 <!-- LUIS DE GÓNGORA -->
                 <div class="author-card" style="border-left-color: #F59E0B;">
-                    <h2>📜 Luis de Góngora (1561-1627)</h2>
-                    <h3>El príncipe de las tinieblas (del culteranismo)</h3>
+                    <div class="author-header">
+                        <img class="author-photo" src="../../img/barroco/luis-de-gongora.jpg" alt="Retrato de Luis de Góngora">
+                        <div>
+                            <h2>📜 Luis de Góngora (1561-1627)</h2>
+                            <h3>El príncipe de las tinieblas (del culteranismo)</h3>
+                        </div>
+                    </div>
 
                     <p>
                         <strong>Luis de Góngora y Argote</strong> llevó la poesía barroca a la máxima complejidad
@@ -247,8 +265,13 @@
 
                 <!-- FRANCISCO DE QUEVEDO -->
                 <div class="author-card" style="border-left-color: #10B981;">
-                    <h2>⚔️ Francisco de Quevedo (1580-1645)</h2>
-                    <h3>El maestro del conceptismo</h3>
+                    <div class="author-header">
+                        <img class="author-photo" src="../../img/barroco/francisco-de-quevedo.jpg" alt="Retrato de Francisco de Quevedo">
+                        <div>
+                            <h2>⚔️ Francisco de Quevedo (1580-1645)</h2>
+                            <h3>El maestro del conceptismo</h3>
+                        </div>
+                    </div>
 
                     <p>
                         <strong>Francisco de Quevedo y Villegas</strong> es el escritor más mordaz, ingenioso y
