--- a/materials/presentaciones/barroco/obras.html
+++ b/materials/presentaciones/barroco/obras.html
@@ -41,6 +41,8 @@
         .obra-card { background: linear-gradient(135deg, rgba(139, 92, 246, 0.05), rgba(236, 72, 153, 0.05));
                      border-left: 5px solid #8B5CF6; border-radius: 12px; padding: 2rem; margin-bottom: 2rem; }
         .obra-card h2 { margin-top: 0; }
+        .obra-media { display: flex; justify-content: center; margin: 0 0 1.25rem; }
+        .obra-img { max-width: 100%; border-radius: 12px; box-shadow: var(--shadow-md); }
         .quote-box { background: linear-gradient(135deg, rgba(250, 112, 154, 0.1), rgba(254, 225, 64, 0.1));
                      border-left: 4px solid #fa709a; padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0;
                      font-style: italic; font-size: 1.05rem; }
@@ -93,6 +95,9 @@
 
                 <div class="obra-card">
                     <h3>Fuenteovejuna (c. 1612-1614)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/fuenteovejuna.jpg" alt="Portada antigua de Fuenteovejuna">
+                    </div>
 
                     <p>
                         <strong>Género</strong>: Drama histórico de honor colectivo<br>
@@ -120,6 +125,9 @@
 
                 <div class="obra-card" style="border-left-color: #EC4899;">
                     <h3>El caballero de Olmedo (c. 1620-1625)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/caballero-de-olmedo.svg" alt="Ilustración libre para El caballero de Olmedo">
+                    </div>
 
                     <p>
                         <strong>Género</strong>: Tragicomedia inspirada en un romance tradicional<br>
@@ -160,6 +168,9 @@
 
                 <div class="obra-card" style="border-left-color: #10B981;">
                     <h3>La vida es sueño (1635)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/la-vida-es-sueno.svg" alt="Ilustración libre para La vida es sueño">
+                    </div>
 
                     <p>
                         <strong>Género</strong>: Drama filosófico<br>
@@ -190,6 +201,9 @@
 
                 <div class="obra-card" style="border-left-color: #6366F1;">
                     <h3>El alcalde de Zalamea (c. 1640)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/alcalde-de-zalamea.svg" alt="Ilustración libre para El alcalde de Zalamea">
+                    </div>
                     <p>
                         <strong>Género</strong>: Drama de honor<br>
                         <strong>Tema</strong>: Honor del villano rico; justicia frente a privilegios militares
@@ -229,6 +243,9 @@
 
                 <div class="obra-card" style="border-left-color: #EC4899;">
                     <h3>Soledades (1613, inacabado)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/soledades.svg" alt="Ilustración libre para Soledades de Góngora">
+                    </div>
                     <p>
                         <strong>Género</strong>: Poema culterano, silva (versos endecasílabos y heptasílabos)<br>
                         <strong>Tema</strong>: Peregrinación de un náufrago por un paisaje idealizado
@@ -257,6 +274,9 @@
 
                 <div class="obra-card" style="border-left-color: #F59E0B;">
                     <h3>Fábula de Polifemo y Galatea (1612)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/polifemo-galatea.jpg" alt="Grabado antiguo sobre Polifemo y Galatea">
+                    </div>
                     <p>
                         <strong>Género</strong>: Fábula mitológica en octavas reales<br>
                         <strong>Tema</strong>: Amor del cíclope Polifemo por la ninfa Galatea
@@ -289,6 +309,9 @@
 
                 <div class="obra-card" style="border-left-color: #6366F1;">
                     <h3>El Buscón (Historia de la vida del Buscón, llamado don Pablos) (1626)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/el-buscon.svg" alt="Ilustración libre para El Buscón">
+                    </div>
                     <p>
                         <strong>Género</strong>: Novela picaresca<br>
                         <strong>Tema</strong>: Ascenso social imposible; sátira despiadada de la sociedad
@@ -315,6 +338,9 @@
 
                 <div class="obra-card" style="border-left-color: #8B5CF6;">
                     <h3>Los sueños (1606-1627)</h3>
+                    <div class="obra-media">
+                        <img class="obra-img" src="../../img/barroco/los-suenos.svg" alt="Ilustración libre para Los sueños de Quevedo">
+                    </div>
                     <p>
                         <strong>Género</strong>: Prosa satírica y moral<br>
                         <strong>Tema</strong>: Visión alegórica del infierno, la muerte, el juicio final
